# fast-version

./: CLAUDE.md  Justfile  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/scripts/: report-scheduled-failure.sh
.github/workflows/: _checks.yml  ci.yml  release.yml  scheduled.yml  workflow.yml
architecture/: README.md  accept-header-version-negotiation.md  glossary.md  openapi-schema-versioning.md
docs/superpowers/plans/: 2026-07-02-openapi-versioning-fastapi-0139.md
docs/superpowers/specs/: 2026-07-01-openapi-versioning-fastapi-0139-design.md
fast_version/: __init__.py  accept.py  app.py  helpers.py  router.py
planning/: README.md  deferred.md  index.py
planning/_templates/: change.md  decision.md  design.md  glossary.md  plan.md  release.md
planning/changes/2026-07-01.01-openapi-versioning-fastapi-0139/: design.md
planning/changes/2026-07-02.01-adopt-planning-convention/: design.md  plan.md
planning/changes/2026-07-02.02-ty-and-ci-convention/: design.md  plan.md
planning/changes/2026-07-04.01-extract-accept-version-parse/: design.md  plan.md
planning/changes/2026-07-04.02-vendor-media-type-case-insensitive/: change.md
planning/changes/2026-07-04.03-collapse-versioned-paths-seam/: design.md  plan.md
planning/decisions/: 2026-07-04-classproperty-stays-for-ordering-independence.md  2026-07-04-vendor-media-type-stays-process-global.md  2026-07-04-version-stays-a-function-decorator.md
planning/releases/: 1.4.7.md
tests/: conftest.py  test_accept.py  test_app.py
